--- a/styles/c5_main.css
+++ b/styles/c5_main.css
@@ -2,17 +2,25 @@
 :root {
 	--global-color-1: #800000;
 }
-
+html{
+	background: white;
+}
 /* the styles for the elements */
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    margin-left: 10px;
+    width: 600px;
+	margin: 0 auto;
+	border: 3px solid #931420;
+	background-color: #fffded;
 }
 a:focus, a:hover {
 	font-style: italic;
 }
 /* the styles for the header */
+header {
+
+}
 header h2 {
 	font-size: 175%;
 	color: var(--global-color-1);
