--- a/styles/c5_main.css
+++ b/styles/c5_main.css
@@ -3,7 +3,7 @@
 	--global-color-1: #800000;
 }
 html{
-	background: white;
+	background-color: #FFFFFF;
 }
 /* the styles for the elements */
 body {
@@ -19,17 +19,26 @@ a:focus, a:hover {
 }
 /* the styles for the header */
 header {
-
+	padding: 1.5em 2em 0;
+	border-bottom: 3px solid #931420;
+	background-image: linear-gradient(
+			30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: linear-gradient(
+			30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: linear-gradient(
+			30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: linear-gradient(
+			30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: linear-gradient(
+			30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
 }
 header h2 {
 	font-size: 175%;
 	color: var(--global-color-1);
-	text-indent: 30px;
 }
 header h3 {
 	font-size: 130%;
 	font-style: italic;
-	text-indent: 30px;
 }
 header img {
 	float: left;
@@ -40,10 +49,16 @@ header img {
 /* the styles for the main content */
 main {
 	clear: left;
+	padding: 0 30px;
+}
+main{
+	padding: 0 30px;
 }
 main h1 {
 	font-size: 150%;
 	padding: .3em 0;
+	border-top: 3px solid #931420;
+	border-bottom: 3px solid #931420;
 }
 main h2 {
 	color: var(--global-color-1);
@@ -72,6 +87,11 @@ main li {
 }
 
 /* the styles for the footer */
+footer{
+	background-color: #931420;
+	color: white;
+	border: 1px solid;
+}
 footer p {
 	text-align: center;
 	padding: 1em 0;
